Fix event page to work on mobile

--- a/src/assets/stylesheets/application/base.scss
+++ b/src/assets/stylesheets/application/base.scss
@@ -116,3 +116,11 @@ strong {
   margin-left: auto;
   margin-right: auto;
 }
+
+.only-mobile {
+  display: none;
+  
+  @media screen and (max-width: $tablet-width) {
+    display: inherit;
+  }
+}
