--- a/src/assets/stylesheets/application/events.scss
+++ b/src/assets/stylesheets/application/events.scss
@@ -10,6 +10,10 @@
       display: flex;
       justify-content: space-between;
 
+      @media screen and (max-width: $mobile-width) {
+        flex-direction: column;
+      }
+
       .events-header-title {
         font-size: 24px;
         color: #333333;
@@ -22,6 +26,10 @@
         border-radius: 3px;
         background-color: #ffffff;
         border: solid 1px #dadada;
+
+        @media screen and (max-width: $tablet-width) {
+          width: auto;
+        }
 
         .events-filter {
           padding-left: 10px;
@@ -37,13 +45,6 @@
           &::placeholder {
             color: #b2b2b2;
           }
-
-          @media screen and (max-width: 650px) {
-            position: relative;
-            top: auto;
-            width: 100%;
-            margin-bottom: 20px;
-          }
         }
 
         .events-select {
@@ -56,6 +57,10 @@
           border: solid 1px white;
           border-left: solid 1px #dadada;
           background-color: #ffffff;
+
+          @media screen and (max-width: $tablet-width) {
+            width: auto;
+          }
         }
       }
     }
@@ -72,6 +77,9 @@
         color: #333333;
       }
 
+      @media screen and (max-width: $tablet-width) {
+        display: none;
+      }
     }
 
     .events-header-separator {
@@ -104,6 +112,10 @@
       padding-top: 22px;
       padding-bottom: 22px;
       line-height: 26px;
+
+      @media screen and (max-width: $tablet-width) {
+        flex-direction: column;
+      }
     }
 
     .event-tx-container {
@@ -137,6 +149,10 @@
       text-decoration: none;
     }
 
+    .event-recipient-label {
+      color: #333333;
+    }
+
     .event-value {
       font-size: 14px;
       text-align: left;
@@ -147,6 +163,10 @@
       font-size: 14px;
       text-align: right;
       color: #333333;
+
+      @media screen and (max-width: $tablet-width) {
+        text-align: left;
+      }
     }
 
     .event-separator {
